## -*- Makefile -*-

AUTOMAKE_OPTIONS = 1.9

AM_CPPFLAGS=`rtm-config --cflags` `pkg-config --cflags opencv`
AM_LDFLAGS=`rtm-config --libs` `pkg-config --libs opencv`

#------------------------------------------------------------
# Targets
#------------------------------------------------------------
# Targets directories
#exampledir = $(pkgdatadir)/examples
#exampledir = /usr/share/OpenRTM-aist/Components/OpenCV
#socompdir  = $(exampledir)/rtcs
exampledir = /usr/share/openrtm-1.1/example/opencv-rtcs
socompdir  = $(exampledir)/rtc
sourcedir  = $(exampledir)/src/Rotate

# Loadable RTCs
socomp_LTLIBRARIES = Rotate.la

Rotate_la_SOURCES = Rotate.cpp Rotate.h
Rotate_la_LDFLAGS = -module

# Standalone RTCs
example_PROGRAMS = RotateComp
#example_DATA     = Rotate.conf

RotateComp_SOURCES = RotateComp.cpp 
RotateComp_LDADD   = Rotate.o

#$(top_builddir)/src/lib/coil/libcoil.la 
# Example sources
source_DATA = $(ALL_SRC) $(EXTRA_DIST)

#------------------------------------------------------------
# Extra distributed files
#------------------------------------------------------------
EXTRA_DIST =                  \
	rtc.conf              \
	Makefile.Rotate \
	README.Rotate

ALL_SRC =                    \
	RotateComp.cpp \
	Rotate.cpp     \
	Rotate.h

#------------------------------------------------------------
# File list for deb/ports packages
#------------------------------------------------------------
lst:
	echo $(ALL_SRC) > src.lst
	echo $(EXTRA_DIST) > other.lst

clean-local:
	rm -f \
	*.gch *.bak *.rpo *.sym lib*.*_pure_* *.lst \
	Makefile.old *core *~ *.so *.log

