## -*- Makefile -*-

AUTOMAKE_OPTIONS = 1.9

AM_CPPFLAGS=`rtm-config --cflags` `pkg-config --cflags opencv`
AM_LDFLAGS=`rtm-config --libs` `pkg-config --libs opencv`

#------------------------------------------------------------
# Targets
#------------------------------------------------------------
# Targets directories
#exampledir = $(pkgdatadir)/examples
#exampledir = /usr/share/OpenRTM-aist/Components/OpenCV
#socompdir  = $(exampledir)/rtcs
exampledir = /usr/share/openrtm-1.1/example/opencv-rtcs
socompdir  = $(exampledir)/rtc
sourcedir  = $(exampledir)/src/Scale

# Loadable RTCs
socomp_LTLIBRARIES = Scale.la

Scale_la_SOURCES = Scale.cpp Scale.h
Scale_la_LDFLAGS = -module

# Standalone RTCs
example_PROGRAMS = ScaleComp
#example_DATA     = Scale.conf

ScaleComp_SOURCES = ScaleComp.cpp 
ScaleComp_LDADD   = Scale.o

#$(top_builddir)/src/lib/coil/libcoil.la 
# Example sources
source_DATA = $(ALL_SRC) $(EXTRA_DIST)

#------------------------------------------------------------
# Extra distributed files
#------------------------------------------------------------
EXTRA_DIST =                  \
	rtc.conf              \
	Makefile.Scale \
	README.Scale

ALL_SRC =                    \
	ScaleComp.cpp \
	Scale.cpp     \
	Scale.h

#------------------------------------------------------------
# File list for deb/ports packages
#------------------------------------------------------------
lst:
	echo $(ALL_SRC) > src.lst
	echo $(EXTRA_DIST) > other.lst

clean-local:
	rm -f \
	*.gch *.bak *.rpo *.sym lib*.*_pure_* *.lst \
	Makefile.old *core *~ *.so *.log

