## -*- Makefile -*-

AUTOMAKE_OPTIONS = 1.9

AM_CPPFLAGS=`rtm-config --cflags` `pkg-config --cflags opencv`
AM_LDFLAGS=`rtm-config --libs` `pkg-config --libs opencv`

#------------------------------------------------------------
# Targets
#------------------------------------------------------------
# Targets directories
#exampledir = $(pkgdatadir)/examples
exampledir = /usr/share/OpenRTM-aist/Components/OpenCV
socompdir  = $(exampledir)/rtcs
sourcedir  = $(exampledir)/src/Translate

# Loadable RTCs
socomp_LTLIBRARIES = Translate.la

Translate_la_SOURCES = Translate.cpp Translate.h
Translate_la_LDFLAGS = -module

# Standalone RTCs
example_PROGRAMS = TranslateComp
#example_DATA     = Translate.conf

TranslateComp_SOURCES = TranslateComp.cpp 
TranslateComp_LDADD   = Translate.o

#$(top_builddir)/src/lib/coil/libcoil.la 
# Example sources
source_DATA = $(ALL_SRC) $(EXTRA_DIST)

#------------------------------------------------------------
# Extra distributed files
#------------------------------------------------------------
EXTRA_DIST =                  \
	rtc.conf              \
	Makefile.Translate \
	README.Translate

ALL_SRC =                    \
	TranslateComp.cpp \
	Translate.cpp     \
	Translate.h

#------------------------------------------------------------
# File list for deb/ports packages
#------------------------------------------------------------
lst:
	echo $(ALL_SRC) > src.lst
	echo $(EXTRA_DIST) > other.lst

clean-local:
	rm -f \
	*.gch *.bak *.rpo *.sym lib*.*_pure_* *.lst \
	Makefile.old *core *~ *.so *.log

